--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,12 @@
-#Gradle
-org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx2048M"
-org.gradle.caching=true
-org.gradle.configuration-cache=true
-
 #Kotlin
 kotlin.code.style=official
+kotlin.daemon.jvmargs=-Xmx2048M
+kotlin.native.usePlatformClang=true
+
+#Gradle
+org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=1g -Dfile.encoding=UTF-8
+org.gradle.java.home=/Library/Java/JavaVirtualMachines/temurin-17.jdk/Contents/Home
 
 #Android
-android.useAndroidX=true
 android.nonTransitiveRClass=true
+android.useAndroidX=true
